fix(captures): attendre les tuiles sur une condition, non sur un délai (#3102)
* fix(captures): attendre les tuiles sur une condition, non sur un délai

L'attente des tuiles était un sleep de six secondes, puis on photographiait quoi
qu'il arrive. Une course contre le réseau, perdue au hasard : une capture pouvait
partir avec des tuiles manquantes.

Rien ne l'atténuait au fil des exécutions. Gluon Maps cache ses tuiles dans un
répertoire temporaire propre à chaque JVM, donc chaque run repart d'un cache vide
et rejoue la course entière.

L'attente observe désormais l'état du graphe de scène et rend la main quand plus
aucune image ne se charge et que leur nombre a cessé de bouger. Le délai n'est
plus qu'un plafond. Gain annexe net : 8 captures en 10 s au lieu de 48.

⚠️ CELA NE REND PAS LES CAPTURES DETERMINISTES, et je l'ai mesuré plutôt que
supposé. Après ce correctif, les quatre aperçus de carte varient toujours d'un
run à l'autre : 0,34 % des pixels, confinés au panneau de la carte, suivant les
tracés fins des routes. Porter la quiétude exigée de 0,75 s à 3 s n'y change
rien. Ce sont les tuiles elles-mêmes qui diffèrent d'une exécution à l'autre.
#3068 reste donc ouverte, avec cette mesure.

⚠️ Ma première version de ce correctif rythmait l'observation par une Timeline,
au motif correct que le graphe de scène n'est pas thread-safe. Sous la Headless
Platform, une Timeline ne tique jamais : interblocage franc, la capture ne rendant
plus jamais la main. Quarante minutes sans qu'un seul run se termine.

La version livrée concilie les deux contraintes : un fil de veille compte le
temps, et fait exécuter chaque observation SUR le fil JavaFX par runLater, que la
boucle imbriquée dépile.

Refs #3068.

* docs(captures): la règle de déterminisme porte sur ce que le produit rend

Arbitrage pris : on garde la dépendance aux tuiles OpenStreetMap.

La règle d'or de captures.md affirmait un déterminisme sans réserve, que quatre
fichiers enfreignaient en silence. Elle distingue d